appId: com.android.settings
---
- scrollUntilVisible:
    element:
      text: 'Settings'
- tapOn: 'Settings'
- tapOn: 'Open'
