appId: com.android.settings
---
- tapOn: Region
- inputText: ${REGION}
- tapOn:
    text: ${REGION}
    index: 1

- runFlow:
    when:
      true: ${REGION == 'United states'}
    file: tap.yml
    env:
      TEXT: ${STATE}
