appId: com.android.settings
---
- tapOn: 'Select UTC offset'
- scrollUntilVisible:
    element:
      text: ${GMT}
- tapOn: ${GMT}
